@@ -119,6 +119,7 @@ Version 0.0.4b (in progress)
 * [Improved] Replaced $oscript with $basename.
 * [Improved] Replaced $page Smarty variable with $basename.
 * [Improved] Updated ACP with $basename changes.
+* [Fixed] Last update time and maintenance status not passed to scripts.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
